objects/ASI_CRM_Receipt_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Amount__c</fullName>
        <label>Receipt Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Credit_Debit_Note__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Credit/Debit Note</label>
        <referenceTo>ASI_CRM_Credit_Debit_Note__c</referenceTo>
        <relationshipLabel>Receipt Line Items</relationshipLabel>
        <relationshipName>Receipt_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_CRM_Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice</label>
        <referenceTo>ASI_CRM_Invoice__c</referenceTo>
        <relationshipLabel>Receipt Line Items</relationshipLabel>
        <relationshipName>Receipt_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Paid_In_Days__c</fullName>
        <formula>IF(ISBLANK( ASI_CRM_Invoice__c ), 
-1, 
 ASI_CRM_Receipt__r.ASI_CRM_Receipt_Date__c - ASI_CRM_Invoice__r.ASI_CRM_Invoice_Date__c 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Paid In (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Payment_ID__c</fullName>
        <label>Payment ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Prompt_Payment__c</fullName>
        <formula>ASI_CRM_Paid_In_Days__c &lt;=  ASI_CRM_Invoice__r.ASI_CRM_Customer_Payment_Term__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prompt Payment?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Receipt_Number__c</fullName>
        <formula>ASI_CRM_Receipt__r.ASI_CRM_Receipt_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Receipt Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Receipt__c</fullName>
        <label>Receipt</label>
        <referenceTo>ASI_CRM_Receipt__c</referenceTo>
        <relationshipLabel>Receipt Line Items</relationshipLabel>
        <relationshipName>Receipt_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Remark__c</fullName>
        <label>Remark</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Receipt Line Item</label>
    <nameField>
        <displayFormat>RCPTL-{000000}</displayFormat>
        <label>Receipt Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Receipt Line Items</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_SG_Receipt_Line_Item</fullName>
        <active>true</active>
        <label>SG Receipt Line Item</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>